<resources>
    <string name="app_name">Popular Movies</string>
    <string name="releaseDate">Release Date</string>
    <string name="movieTitle">Movie Title</string>
    <string name="userRating">User Rating</string>
    <string name="movieDescription">Movie Description</string>
    <string name="movieImage">Movie Image</string>
    <string name="sortByMostPopular">Sort By Most Popular</string>
    <string name="sortByTopRated">Sort By Top Rated</string>
    <string name="bookmarked">Bookmarked Movies</string>
    <string name="pixel">px</string>
    <string name="bookmark">Bookmark</string>
    <string name="author">Author</string>
    <string name="content">Content</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="trailerTitle">Trailer Title</string>
    <string name="type">Type</string>
    <string name="size">Size</string>
    <string name="playImage">Image to play trailer</string>
    <string name="shareImage">Image to share trailer</string>
</resources>
