<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
    android:layout_margin="5dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/trailerTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/trailerTitle" />
            <TextView
                android:id="@+id/trailerType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:text="@string/type" />
            <TextView
                android:id="@+id/trailerSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:text="@string/size" />
        </LinearLayout>
        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/play"
            android:contentDescription="@string/playImage"
            android:background="@color/colorWhite"
            android:scaleType="fitCenter"
            />
        <ImageButton
            android:id="@+id/shareButton"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/share"
            android:contentDescription="@string/shareImage"
            android:background="@color/colorWhite"
            android:scaleType="fitCenter"
            />
    </LinearLayout>
</android.support.v7.widget.CardView>